@@ -28,6 +28,7 @@ import org.twins.core.dao.attachment.TwinAttachmentEntity;
 import org.twins.core.dao.permission.PermissionRepository;
 import org.twins.core.dao.twin.TwinEntity;
 import org.twins.core.dao.twinclass.*;
+import org.twins.core.dao.validator.TwinClassFieldActionValidatorRuleEntity;
 import org.twins.core.domain.ApiUser;
 import org.twins.core.domain.search.TwinSort;
 import org.twins.core.domain.twinclass.TwinClassFieldDuplicate;
@@ -45,6 +46,8 @@ import org.twins.core.service.SystemEntityService;
 import org.twins.core.service.auth.AuthService;
 import org.twins.core.service.i18n.I18nService;
 import org.twins.core.service.twin.TwinService;
+import org.twins.core.service.twin.TwinValidatorSetService;
+import org.twins.core.service.validator.TwinClassFieldActionValidatorRuleService;
 
 import java.math.BigDecimal;
 import java.util.*;
@@ -73,6 +76,10 @@ public class TwinClassFieldService extends EntitySecureFindServiceImpl<TwinClass
     private final FeaturerService featurerService;
     @Lazy
     private final AuthService authService;
+    @Lazy
+    private final TwinClassFieldActionValidatorRuleService twinClassFieldActionValidatorRuleService;
+    @Lazy
+    private final TwinValidatorSetService twinValidatorSetService;
 
     @Autowired
     private CacheManager cacheManager;
@@ -251,7 +258,7 @@ public class TwinClassFieldService extends EntitySecureFindServiceImpl<TwinClass
             if (ruleMaps.containsGroupedKey(ruleEntity.getId())) {
                 List<TwinClassFieldEntity> fields = ruleMaps.getGrouped(ruleEntity.getId()).stream()
                         .map(TwinClassFieldRuleMapEntity::getTwinClassField)
-                        .collect(Collectors.toList());
+                        .toList();
                 ruleEntity.setFieldKit(new Kit<>(fields, TwinClassFieldEntity::getId));
             } else {
                 ruleEntity.setFieldKit(Kit.EMPTY);
@@ -793,5 +800,32 @@ public class TwinClassFieldService extends EntitySecureFindServiceImpl<TwinClass
 
     public boolean isValidForClass(TwinClassEntity twinClass, TwinClassFieldEntity twinClassField) throws ServiceException {
         return twinClassService.isInheritedFromClass(twinClass, twinClassField.getTwinClassId(), twinClassField.getInheritable());
+    }
+
+    public void loadTwinClassFieldActionValidationRules(Collection<TwinClassFieldEntity> fields) throws ServiceException {
+        Kit<TwinClassFieldEntity, UUID> needLoad = new Kit<>(TwinClassFieldEntity::getId);
+        fields.stream()
+                .filter(f -> f.getTwinClassFieldActionValidationRules() == null)
+                .forEach(needLoad::add);
+
+        if (needLoad.isEmpty())
+            return;
+
+        List<TwinClassFieldActionValidatorRuleEntity> rules = twinClassFieldActionValidatorRuleService.findByTwinClassFieldIdInOrderByOrder(needLoad.getIdSet());
+        KitGrouped<TwinClassFieldActionValidatorRuleEntity, UUID, UUID> rulesByField = new KitGrouped<>(
+                rules,
+                TwinClassFieldActionValidatorRuleEntity::getId,
+                TwinClassFieldActionValidatorRuleEntity::getTwinClassFieldId
+        );
+
+        for (TwinClassFieldEntity field : needLoad) {
+            List<TwinClassFieldActionValidatorRuleEntity> fieldRules = rulesByField.getGrouped(field.getId());
+            field.setTwinClassFieldActionValidationRules(new KitGrouped<>(
+                    fieldRules,
+                    TwinClassFieldActionValidatorRuleEntity::getId,
+                    TwinClassFieldActionValidatorRuleEntity::getTwinClassFieldAction
+            ));
+        }
+        twinValidatorSetService.loadTwinValidatorSet(rules);
     }
 }
